--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<style>
 			body {text-align : center; font-family: arial; background-color: white;}
 			h1 { font-size : 50; font-weight : bold; color : #1B5E20}
-		   	p{ color : black}
+		   	p{ font-size : 10px; color : black}
 			button {background-color: #4CAF50; color: white; border : none; padding : 15px 32px; text-align: center; text-decoration : none; display : inline-block; font-size: 20px; margin: 4px 2px;cursor:pointer;}
 		</style>
 	</body>
